# Pantheon

./: .clangd  README.md  debug_server.sh
Windows/: Readme.md  Windows.sln  Windows.vcxproj
Windows/Debug/: OneSendOneRecvServer.ilk
Windows/OneSendOneRecvClient/: OneSendOneRecvClient.vcxproj  client.cpp
Windows/OneSendOneRecvServer/: OneSendOneRecvServer.vcxproj  server.cpp
Windows/OneSendOneRecvServer/Debug/: vc142.idb
Windows/OneSendOneRecvServer/Debug/OneSendO.4A337F7E.tlog/: CL.command.1.tlog  CL.write.1.tlog  OneSendOneRecvServer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Windows/temp/OneSendOneRecvClient/Debug/: vc142.idb
Windows/temp/OneSendOneRecvClient/Debug/OneSendO.02E22373.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Windows/temp/OneSendOneRecvServer/Debug/: vc142.idb
Windows/temp/OneSendOneRecvServer/Debug/OneSendO.4A337F7E.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
docs/: cpp-syntax-notes.md
one_send_one_recv_simple_msg/: CMakeLists.txt  README.md  client.cc  server.cc
one_send_one_recv_simple_msg/.cache/clangd/index/: client.cc.3D78DF12B0799C0B.idx  client.cc.7FF6068D98567E9E.idx  server.cc.3288E1D83A2D8072.idx  server.cc.E137599DDF3D284D.idx
one_send_one_recv_struct_msg/: CMakeLists.txt  client.cc  server.cc
one_send_one_recv_struct_msg/.cache/clangd/index/: client.cc.1459D990FE675D54.idx  server.cc.2AED611924C28742.idx
scripts/: gen_compile_commands.sh
